// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic 1`] = `
"import React from \\"react\\";
const attributes = {};
const __html = \`<h1>title</h1>
<ul>
<li>a</li>
<li>b</li>
</ul>
<h2>title2</h2>
<ol>
<li>a</li>
<li>b</li>
</ol>
\`;
function ReactComponent(props) {
  return /* @__PURE__ */ React.createElement(\\"div\\", {
    className: \\"markdown\\",
    dangerouslySetInnerHTML: { __html }
  });
}
export {
  attributes,
  ReactComponent
};
"
`;

exports[`code fence 1`] = `
"import React from \\"react\\";
const attributes = {};
const __html = \`<h1>title</h1>
<h2>title2</h2>
<p><code>test</code></p>
<pre><code class=\\"language-js\\">{ 
  a: 123
}
</code></pre>
\`;
function ReactComponent(props) {
  return /* @__PURE__ */ React.createElement(\\"div\\", {
    className: \\"markdown\\",
    dangerouslySetInnerHTML: { __html }
  });
}
export {
  attributes,
  ReactComponent
};
"
`;
